<resources>
    <string name="todo">TODO</string>
    <string name="app_name">T-care</string>
    <string name="slogan"><textcolor color="#1479FF">The best app for your health</textcolor></string>
    <string name="sign_up">Sign up</string>
    <string name="log_in"><textcolor color="#FFFF">Log in</textcolor></string>
    <string name="welcome">Welcome back</string>
    <string name="hint">Log in to continue</string>
    <string name="usernameHint">Username</string>
    <string name="firstNameHint">FirstName</string>
    <string name="lastNameHint">LastName</string>
    <string name="passwordHint">Password</string>
    <string name="confirmdPasswordHint">Confirm Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="register">Register</string>
    <string name="verification">Verification</string>
    <string name="contact_us">Contact Us</string>
    <string name="hint2">Create your new account</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="nationalId_hint">National ID</string>
    <string name="phone_number">Phone number</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="verification_code"><font size="45">- - -   - - -</font></string>
    <string name="didn_t_receive_a_message">Didn\'t receive a message?</string>
    <string name="send_again">Send Again</string>
    <string name="enter_the_6_digits">Enter the 6 digits</string>
    <string name="policeman">Policeman</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="sign_up_as">Sign-Up as:-</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="about_Us">About Us</string>
    <string name="user_qr_code">User QR code</string>
    <string name="qr_code">QR Code</string>
    <string name="see_your_profile">See your profile</string>
    <string name="profile">Profile</string>
    <string name="hi_username">Hi username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_info">more info</string>
    <string name="enter_text_to_generate_qr_code">Enter text to generate QR code</string>
    <string name="generate">Generate</string>
    <string name="send">Send</string>
    <string name="preferred_method_of_response">Preferred method of response</string>
    <string name="message">Message</string>
    <string name="user_interface">User Interface</string>
    <string name="social">Social</string>
    <string name="medical">Medical</string>
    <string name="personal">Personal</string>

    <string name="description">Description here</string>
    <array name="title">
        <item>title1</item>
        <item>title2</item>
        <item>title3</item>
        <item>title4</item>
        <item>title5</item>
    </array>
    <string name="title_activity_home2">home2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="qr_generator">QR Generator</string>
    <string name="more_options">More Options</string>
    <string name="disease_name">Disease name</string>
    <string name="scan_now">Scan Now</string>
    <string name="error_message">error message</string>
    <string name="error_title">error title</string>
    <string name="our_features">Our Features</string>
    <string name="covid_19_nresult">Covid-19\nResult</string>
    <string name="your_id_n1">Your ID \n1</string>
    <string name="basic_information">Basic information</string>
    <string name="usertype">usertype</string>
    <string name="it_will_require_enabling_bluetooth_to_discover_nearby_devices.">It will require enabling Bluetooth to discover nearby devices.</string>
    <string name="enable_notification">Enable Notification</string>
</resources>
