<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/settings_ic"
            android:title="@string/action_settings"
            />
    </group>

    <item android:title="social ">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/share_ic"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/info_ic"
                    android:visible="true"
                    android:title="@string/about_us" />
            </group>
        </menu>
    </item>

    <item android:title="user interface ">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_login_24"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
</menu>
