<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.activity.StartingApp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@drawable/ic_wave_7_"
        android:gravity="top"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@drawable/tcarelogo" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="15sp">

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/gender"
            android:textColor="#0F4090"

            android:textSize="24sp"> </TextView>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/maleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/male"
                android:textColor="#0F4090"
                android:textSize="20sp"
                android:buttonTint="#0F4090"
                android:onClick="onClick"
                />

            <RadioButton
                android:id="@+id/femaleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:text="@string/female"
                android:textColor="#0F4090"
                android:textSize="20sp"
                android:buttonTint="#0F4090"
                android:onClick="onClick"
                > </RadioButton>
        </RadioGroup>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="15sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="@string/sign_up_as"
            android:textColor="#0F4090"
            android:textSize="24sp"
            />

        <RadioGroup
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:buttonTint="#0F4090"
            >

            <RadioButton
                android:id="@+id/patientbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/patient"
                android:textSize="20sp"
                android:textColor="#0F4090"
                android:buttonTint="#0F4090"
                > </RadioButton>

            <RadioButton
                android:id="@+id/doctorbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/doctor"
                android:textSize="20sp"
                android:textColor="#0F4090"
                android:buttonTint="#0F4090"
                android:onClick="onClick"
                > </RadioButton>

            
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bluebutton"
        android:text="@string/next"
        android:textSize="28sp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/graybutton"
        android:text="@string/back"
        android:textSize="28sp"
        android:textColor="@color/mainBlue"
        />
    </LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressing"
        android:layout_width="166dp"
        android:layout_height="181dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213"
        app:lottie_autoPlay="true"
        app:lottie_enableMergePathsForKitKatAndAbove="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/progressbar1"
        android:visibility="gone"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>