<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="UI.StartingApp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:src="@drawable/logo1"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText"> </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="5dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="35dp"
                android:text="@string/app_name"
                android:textColor="#FFFF"
                android:textSize="45sp"
                android:textStyle="bold"
                android:layout_weight="2" > </TextView>


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="60dp"
            android:text="@string/slogan"
            android:textColor="#1479FF"
            android:textSize="64sp"
            android:textStyle="bold"> </TextView>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/graybutton"
            android:text="@string/sign_up"
            android:textColor="#FF5358"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/bluebutton"
            android:text="@string/log_in"
            android:textSize="28sp"
             />
    </LinearLayout>
