<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="UI.StartingApp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="81dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="TODO"
            android:src="@drawable/logo1"
            tools:ignore="ContentDescription,HardcodedText"></ImageView>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/welcome"
        android:textColor="#0F4090"
        android:textSize="48sp"
        android:textStyle="bold"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/hint"
        android:textColor="#989494"
        android:textSize="18sp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:hint="Username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:hint="Password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetPass_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="#0F4090"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded"></TextView>


    </LinearLayout>


    <Button
        android:id="@+id/logInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bluebutton"
        android:text="@string/log_in"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="0dp"
            android:gravity="left"
            android:text="@string/dont_have_an_account"
            android:textColor="#A19F9F"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,TextContrastCheck"></TextView>

        <TextView
            android:id="@+id/signUp_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:gravity="left"
            android:text="@string/sign_up"
            android:textColor="#0F4090"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded"></TextView>
    </LinearLayout>

</LinearLayout>
